[package]
name = "coolrays"
version = "0.1.0"
authors = ["Joshua Simmons <simmons44@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_pcg = "0.2.0"
rand_distr = "0.2.1"

[profile.release]
debug = true